--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ nav button.active {
 .image-placeholder {
     width: 100%;
     height: 200px;
-    background-color: #fff;
+    
     /* Light gray */
     display: flex;
     justify-content: center;
@@ -203,6 +203,7 @@ nav button.active {
     font-weight: bold;
     border: 1px dashed #aaa;
     margin-top: 15px;
+    background-color: #eee;
 }
 
 .image-placeholder.small-placeholder {
